// Vitest Snapshot v1

exports[`<SubtractionFileItem /> > should render when [active=%p] false 1`] = `
<Styled(BoxGroupSectionSelect__SelectBoxGroupSection)
  active={false}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Attribution
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</Styled(BoxGroupSectionSelect__SelectBoxGroupSection)>
`;

exports[`<SubtractionFileItem /> > should render when [active=%p] true 1`] = `
<Styled(BoxGroupSectionSelect__SelectBoxGroupSection)
  active={true}
  onClick={[Function]}
>
  <strong>
    test
  </strong>
  <Attribution
    time="2018-02-14T17:12:00.000000Z"
    user="test-user"
  />
</Styled(BoxGroupSectionSelect__SelectBoxGroupSection)>
`;
